Change some colors

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <section class="grid gap-10 md:grid-cols-[1.1fr_auto]">
-  <div class="space-y-6 text-lg leading-relaxed text-slate-200">
+  <div class="space-y-6 text-lg leading-relaxed text-slate-700">
     <p>
       I’m Arun, a designer-developer hybrid who builds thoughtful digital products and keeps a close
       eye on craft and clarity. From defining systems to polishing micro-interactions, I work where
@@ -18,7 +18,7 @@ permalink: /
     </p>
   </div>
   <div class="flex items-start justify-center">
-    <div class="rounded-3xl border border-slate-800 bg-slate-900/50 p-4 shadow-[0_10px_40px_rgba(15,23,42,0.8)]">
+    <div class="rounded-3xl border border-slate-200 bg-white p-4 shadow-lg shadow-slate-200/80">
       <img
         src="/assets/images/profile-placeholder.svg"
         alt="Photo of Arun"
@@ -29,18 +29,18 @@ permalink: /
 </section>
 
 <section class="space-y-6">
-  <h2 class="text-2xl font-semibold text-white">How I approach work</h2>
+  <h2 class="text-2xl font-semibold text-slate-900">How I approach work</h2>
   <div class="grid gap-5 md:grid-cols-2">
-    <div class="rounded-2xl border border-slate-800 bg-slate-900/40 p-5 shadow-lg shadow-slate-900/80">
-      <h3 class="text-lg font-semibold text-white">Listen & Understand</h3>
-      <p class="text-sm text-slate-300">
+    <div class="rounded-2xl border border-slate-200 bg-white/90 p-5 shadow-sm shadow-slate-200/70">
+      <h3 class="text-lg font-semibold text-slate-900">Listen & Understand</h3>
+      <p class="text-sm text-slate-600">
         I start every project by aligning goals with measurable outcomes, then map those ideas into
         tangible, human-centered layouts.
       </p>
     </div>
-    <div class="rounded-2xl border border-slate-800 bg-slate-900/40 p-5 shadow-lg shadow-slate-900/80">
-      <h3 class="text-lg font-semibold text-white">Prototype Fast</h3>
-      <p class="text-sm text-slate-300">
+    <div class="rounded-2xl border border-slate-200 bg-white/90 p-5 shadow-sm shadow-slate-200/70">
+      <h3 class="text-lg font-semibold text-slate-900">Prototype Fast</h3>
+      <p class="text-sm text-slate-600">
         I prototype with real content and interactive components so that stakeholders can feel the
         experience early.
       </p>
