--- a/src/contact.html
+++ b/src/contact.html
@@ -6,16 +6,19 @@ permalink: /contact/
 
 <section class="space-y-6">
   <div class="space-y-2">
-    <h1 class="text-3xl font-semibold text-white">Let’s build something together</h1>
-    <p class="text-lg text-slate-300">
+    <h1 class="text-3xl font-semibold text-slate-900">Let’s build something together</h1>
+    <p class="text-lg text-slate-600">
       I’m always open to collaborating on thoughtful products. Feel free to reach out whether it’s a
       quick call, a creative brief, or just to talk shop.
     </p>
   </div>
 
-  <div class="rounded-2xl border border-slate-800 bg-slate-900/50 p-6">
+  <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm shadow-slate-200/80">
     <p class="text-sm uppercase tracking-[0.5em] text-slate-500">Email</p>
-    <a class="text-xl font-medium text-white hover:text-slate-100" href="mailto:arun.raodesign@example.com">
+    <a
+      class="text-xl font-medium text-[#0693e3] hover:text-[#0056a3] transition-colors"
+      href="mailto:arun.raodesign@example.com"
+    >
       arun.raodesign@example.com
     </a>
   </div>
@@ -24,7 +27,7 @@ permalink: /contact/
     <p class="text-sm uppercase tracking-[0.5em] text-slate-500">Socials</p>
     <div class="grid gap-3 text-lg">
       <a
-        class="rounded-2xl border border-slate-800 bg-slate-900/60 px-5 py-4 text-white hover:border-white transition"
+        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
         href="https://github.com/arunraodesign"
         target="_blank"
         rel="noreferrer"
@@ -32,7 +35,7 @@ permalink: /contact/
         GitHub · @arunraodesign
       </a>
       <a
-        class="rounded-2xl border border-slate-800 bg-slate-900/60 px-5 py-4 text-white hover:border-white transition"
+        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
         href="https://www.linkedin.com/in/arun-rao"
         target="_blank"
         rel="noreferrer"
@@ -40,7 +43,7 @@ permalink: /contact/
         LinkedIn · /in/arun-rao
       </a>
       <a
-        class="rounded-2xl border border-slate-800 bg-slate-900/60 px-5 py-4 text-white hover:border-white transition"
+        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
         href="https://twitter.com/arun_rao"
         target="_blank"
         rel="noreferrer"
