--- a/src/index.html
+++ b/src/index.html
@@ -7,43 +7,19 @@ permalink: /
 <section class="grid gap-10 md:grid-cols-[1.1fr_auto]">
   <div class="space-y-6 text-lg leading-relaxed text-slate-700">
     <p>
-      I’m Arun, a designer-developer hybrid who builds thoughtful digital products and keeps a close
-      eye on craft and clarity. From defining systems to polishing micro-interactions, I work where
-      ideas meet execution.
+      I received my Bachelor of Dental Surgery (BDS) degree from Government Dental College, Rohtak, India in 1988, and Master of Dental Surgery (MDS) degree in Orthodontics from the All India Institute of Medical Sciences (AIIMS), New Delhi, a premier health institute of India. I have been working as a General Dentist and an Orthodontist and have been a member of teaching faculty since 1995. I have more than 3000 completed Orthodontic cases to my credit during a span of 19 years. I received my DMD degree from Henry M. Goldman School of Dental Medicine, Boston University in 2015.
     </p>
     <p>
-      I specialize in turning complex briefs into grounded, delightful experiences—whether that’s a
-      landing page, a design system, or an internal tool that saves time. When I’m not designing you’ll
-      find me sketching typography or experimenting with low-latency web animations.
+      Check out my resume and some of my finished cases.
     </p>
   </div>
   <div class="flex items-start justify-center">
     <div class="rounded-3xl border border-slate-200 bg-white p-4 shadow-lg shadow-slate-200/80">
       <img
-        src="/assets/images/profile-placeholder.svg"
+        src="/assets/images/arun_kumar.jpg"
         alt="Photo of Arun"
         class="max-w-[220px] rounded-2xl"
       />
-    </div>
-  </div>
-</section>
-
-<section class="space-y-6">
-  <h2 class="text-2xl font-semibold text-slate-900">How I approach work</h2>
-  <div class="grid gap-5 md:grid-cols-2">
-    <div class="rounded-2xl border border-slate-200 bg-white/90 p-5 shadow-sm shadow-slate-200/70">
-      <h3 class="text-lg font-semibold text-slate-900">Listen & Understand</h3>
-      <p class="text-sm text-slate-600">
-        I start every project by aligning goals with measurable outcomes, then map those ideas into
-        tangible, human-centered layouts.
-      </p>
-    </div>
-    <div class="rounded-2xl border border-slate-200 bg-white/90 p-5 shadow-sm shadow-slate-200/70">
-      <h3 class="text-lg font-semibold text-slate-900">Prototype Fast</h3>
-      <p class="text-sm text-slate-600">
-        I prototype with real content and interactive components so that stakeholders can feel the
-        experience early.
-      </p>
     </div>
   </div>
 </section>
