--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@ title: Home
 permalink: /
 ---
 
-<section class="grid gap-10 md:grid-cols-[1.1fr_auto]">
-  <div class="space-y-6 text-lg leading-relaxed text-slate-700">
+<section class="grid gap-10 items-center md:grid-cols-[1.1fr_auto]">
+  <div class="space-y-6 text-lg leading-relaxed text-slate-700 order-2 md:order-1">
     <p>
       I received my Bachelor of Dental Surgery (BDS) degree from Government Dental College, Rohtak, India in 1988, and Master of Dental Surgery (MDS) degree in Orthodontics from the All India Institute of Medical Sciences (AIIMS), New Delhi, a premier health institute of India. I have been working as a General Dentist and an Orthodontist and have been a member of teaching faculty since 1995. I have more than 3000 completed Orthodontic cases to my credit during a span of 19 years. I received my DMD degree from Henry M. Goldman School of Dental Medicine, Boston University in 2015.
     </p>
@@ -13,13 +13,11 @@ permalink: /
       Check out my resume and some of my finished cases.
     </p>
   </div>
-  <div class="flex items-start justify-center">
-    <div class="rounded-3xl border border-slate-200 bg-white p-4 shadow-lg shadow-slate-200/80">
-      <img
-        src="/assets/images/arun_kumar.jpg"
-        alt="Photo of Arun"
-        class="max-w-[220px] rounded-2xl"
-      />
-    </div>
+  <div class="flex items-start justify-center order-1 md:order-2">
+    <img
+      src="/assets/images/arun_kumar.jpg"
+      alt="Photo of Arun"
+      class="max-w-[340px] rounded-md shadow-lg shadow-slate-200/70"
+    />
   </div>
 </section>
