Update the resume

--- a/src/resume.html
+++ b/src/resume.html
@@ -5,49 +5,127 @@ permalink: /resume/
 ---
 
 <section class="space-y-8">
-  <div class="space-y-2">
-    <p class="text-sm uppercase tracking-[0.5em] text-slate-500">Current focus</p>
-    <h1 class="text-3xl font-semibold text-slate-900">Product Designer & Developer</h1>
-    <p class="text-base text-slate-600">
-      Blending systems thinking, interaction design, and frontend craft to launch coherent and long-lasting
-      digital tools.
-    </p>
+  <div class="space-y-3">
+    <h1 class="text-3xl font-semibold text-slate-900">Resume</h1>
   </div>
 
-  <div class="grid gap-6 md:grid-cols-3">
+  <div class="grid gap-6 md:grid-cols-2">
     <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
-      <h2 class="text-xl font-semibold text-slate-900">Experience</h2>
-      <div class="mt-4 space-y-4 text-sm text-slate-600">
-        <div>
-          <p class="text-slate-900 font-medium">Design Lead · Metra Labs</p>
-          <p>2021 — Present</p>
-          <p>Building the design system and leading collaborative prototyping sprints for a logistics platform.</p>
-        </div>
-        <div>
-          <p class="text-slate-900 font-medium">Product Designer · Flux Data</p>
-          <p>2018 — 2021</p>
-          <p>Released dashboards and workflows that helped reduce manual QA time by 30%.</p>
-        </div>
-      </div>
-    </article>
-
-    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
-      <h2 class="text-xl font-semibold text-slate-900">Skills</h2>
-      <ul class="mt-4 flex flex-wrap gap-2 text-xs uppercase tracking-[0.3em] text-slate-600">
-        <li class="rounded-full border border-slate-200 px-3 py-1">UI Systems</li>
-        <li class="rounded-full border border-slate-200 px-3 py-1">Product Strategy</li>
-        <li class="rounded-full border border-slate-200 px-3 py-1">Story Mapping</li>
-        <li class="rounded-full border border-slate-200 px-3 py-1">HTML / CSS / JS</li>
+      <h2 class="text-xl font-semibold text-slate-900">Educational Background</h2>
+      <ul class="mt-4 space-y-3 text-sm text-slate-600">
+        <li>
+          <p class="text-slate-900 font-medium">Doctor of Dental Medicine (DMD)</p>
+          <p>Boston University Henry M. Goldman School of Dental Medicine</p>
+          <p>2013 - 2015</p>
+        </li>
+        <li>
+          <p class="text-slate-900 font-medium">Master of Dental Surgery (MDS), Orthodontics</p>
+          <p>All India Institute of Medical Sciences, New Delhi (AIIMS)</p>
+          <p>1991 - 1994</p>
+        </li>
+        <li>
+          <p class="text-slate-900 font-medium">Bachelor of Dental Surgery (BDS)</p>
+          <p>Government Dental College, Rohtak (Haryana, India)</p>
+          <p>1984 - 1989</p>
+        </li>
       </ul>
     </article>
 
     <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
-      <h2 class="text-xl font-semibold text-slate-900">Education</h2>
-      <div class="mt-4 text-sm text-slate-600">
-        <p class="font-medium text-slate-900">B.Des in Interaction Design</p>
-        <p>Penn State University · 2014 — 2018</p>
-        <p>Focus on contextual inquiry, prototyping, and accessible systems.</p>
-      </div>
+      <h2 class="text-xl font-semibold text-slate-900">Work Experience</h2>
+      <ul class="mt-4 space-y-3 text-sm text-slate-600">
+        <li>
+          <p class="text-slate-900 font-medium">Working as an Associate Dentist at a private dental office</p>
+          <p>Surrey, BC</p>
+          <p>February 2016 - Present</p>
+        </li>
+        <li>
+          <p class="text-slate-900 font-medium">Professor &amp; Head of the Department (Orthodontics)</p>
+          <p>Luxmi Bai Institute of Dental Sciences &amp; Hospital</p>
+          <p>December 2006 - June 2010</p>
+        </li>
+        <li>
+          <p class="text-slate-900 font-medium">Orthodontist</p>
+          <p>Patiala Orthodontic &amp; Dental Clinic</p>
+          <p>February 1997 - June 2010</p>
+        </li>
+      </ul>
+    </article>
+  </div>
+
+  <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+    <h2 class="text-xl font-semibold text-slate-900">Clinical Skills</h2>
+    <ul class="mt-4 space-y-3 text-sm text-slate-600">
+      <li>
+        <p class="text-slate-900 font-medium">Orthodontics</p>
+        <ul class="list-disc list-inside space-y-1 text-slate-600">
+          <li>Exceptional experience and skill for 15 years</li>
+          <li>Straight wire, Begg's technique, Functional appliances</li>
+        </ul>
+      </li>
+      <li>Comprehensive Oral Diagnosis and Treatment Planning</li>
+      <li>Restorative Procedures (Composites, Amalgams, Inlays &amp; Onlays)</li>
+      <li>Complete Dentures and Removable Cast Partial Dentures</li>
+      <li>Crowns &amp; Bridges</li>
+      <li>Hygiene checks, Prophylaxis, Scaling &amp; Root Planning</li>
+      <li>Root Canal Treatment of Anteriors and Premolars</li>
+      <li>Extractions</li>
+    </ul>
+  </article>
+
+  <div class="grid gap-6 md:grid-cols-2">
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Professional Licensure</h2>
+      <p class="mt-4 text-sm text-slate-600">
+        Registered as a General Dentist with the College of Dental Surgeons of British Columbia.
+      </p>
+    </article>
+
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Professional Memberships</h2>
+      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+        <li>Canadian Dental Association</li>
+        <li>British Columbia Dental Association</li>
+        <li>American Student Dental Association (ASDA) [2013 - 2015]</li>
+        <li>Life Member, Indian Orthodontic Society (IOS)</li>
+        <li>Life Member, Indian Begg's Society (Orthodontics)</li>
+        <li>Life Member, Indian Dental Association (IDA)</li>
+      </ul>
+    </article>
+  </div>
+
+  <div class="grid gap-6 md:grid-cols-2">
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Conferences & Professional Meetings</h2>
+      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+        <li>Pacific Dental Conference, Vancouver, BC [2016]</li>
+        <li>Yankee Dental Conference, Boston, MA [2014, 2015]</li>
+        <li>Numerous national level and state level Dental and Orthodontic Conferences in India</li>
+      </ul>
+    </article>
+
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Publications</h2>
+      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+        <li>&ldquo;Correction of Class II Div. 2 Malocclusion in a Young Adult Female&rdquo; in the journal of Dental Research and Therapies [October 2009]</li>
+        <li>&ldquo;Management of Class II Div. 2 by a General Dentist&rdquo; in the journal of Dental Research and Therapies [November 2009]</li>
+        <li>&ldquo;Versatility of the Modern Begg's Appliance in Intrusion and Bodily Retraction of Maxillary Anteriors&rdquo; in the journal of Dental Research and Therapies [December 2009]</li>
+      </ul>
+    </article>
+  </div>
+
+  <div class="grid gap-6 md:grid-cols-2">
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Community Service</h2>
+      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+        <li>Active association with Colgate India and the Indian Dental Association</li>
+        <li>Organized and attended various dental health camps in India</li>
+      </ul>
+    </article>
+
+    <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
+      <h2 class="text-xl font-semibold text-slate-900">Communication</h2>
+      <p class="mt-4 text-sm text-slate-600">Fluent in English, Punjabi, and Hindi.</p>
     </article>
   </div>
 </section>
