Make sure bullets render in the resume

--- a/src/resume.html
+++ b/src/resume.html
@@ -55,7 +55,7 @@ permalink: /resume/
 
   <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
     <h2 class="text-xl font-semibold text-slate-900">Clinical Skills</h2>
-    <ul class="mt-4 space-y-3 text-sm text-slate-600">
+    <ul class="mt-4 space-y-3 text-sm text-slate-600 list-disc list-inside">
       <li>
         <p class="text-slate-900 font-medium">Orthodontics</p>
         <ul class="list-disc list-inside space-y-1 text-slate-600">
@@ -83,7 +83,7 @@ permalink: /resume/
 
     <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
       <h2 class="text-xl font-semibold text-slate-900">Professional Memberships</h2>
-      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
         <li>Canadian Dental Association</li>
         <li>British Columbia Dental Association</li>
         <li>American Student Dental Association (ASDA) [2013 - 2015]</li>
@@ -97,7 +97,7 @@ permalink: /resume/
   <div class="grid gap-6 md:grid-cols-2">
     <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
       <h2 class="text-xl font-semibold text-slate-900">Conferences & Professional Meetings</h2>
-      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
         <li>Pacific Dental Conference, Vancouver, BC [2016]</li>
         <li>Yankee Dental Conference, Boston, MA [2014, 2015]</li>
         <li>Numerous national level and state level Dental and Orthodontic Conferences in India</li>
@@ -106,7 +106,7 @@ permalink: /resume/
 
     <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
       <h2 class="text-xl font-semibold text-slate-900">Publications</h2>
-      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
         <li>&ldquo;Correction of Class II Div. 2 Malocclusion in a Young Adult Female&rdquo; in the journal of Dental Research and Therapies [October 2009]</li>
         <li>&ldquo;Management of Class II Div. 2 by a General Dentist&rdquo; in the journal of Dental Research and Therapies [November 2009]</li>
         <li>&ldquo;Versatility of the Modern Begg's Appliance in Intrusion and Bodily Retraction of Maxillary Anteriors&rdquo; in the journal of Dental Research and Therapies [December 2009]</li>
