--- a/src/resume.html
+++ b/src/resume.html
@@ -55,10 +55,10 @@ permalink: /resume/
 
   <article class="rounded-2xl border border-slate-200 bg-white p-5 shadow-sm shadow-slate-200/70">
     <h2 class="text-xl font-semibold text-slate-900">Clinical Skills</h2>
-    <ul class="mt-4 space-y-3 text-sm text-slate-600 list-disc list-inside">
+    <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
       <li>
-        <p class="text-slate-900 font-medium">Orthodontics</p>
-        <ul class="list-disc list-inside space-y-1 text-slate-600">
+        <span>Orthodontics:</span>
+        <ul class="mt-2 space-y-1 text-sm text-slate-600 list-disc list-inside pl-4">
           <li>Exceptional experience and skill for 15 years</li>
           <li>Straight wire, Begg's technique, Functional appliances</li>
         </ul>
