Finish the contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -4,52 +4,33 @@ title: Contact
 permalink: /contact/
 ---
 
-<section class="space-y-6">
+<section class="space-y-8 text-center">
   <div class="space-y-2">
-    <h1 class="text-3xl font-semibold text-slate-900">Let’s build something together</h1>
-    <p class="text-lg text-slate-600">
-      I’m always open to collaborating on thoughtful products. Feel free to reach out whether it’s a
-      quick call, a creative brief, or just to talk shop.
-    </p>
+    <h1 class="text-3xl font-semibold text-slate-900">Connect with me</h1>
   </div>
 
-  <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm shadow-slate-200/80">
-    <p class="text-sm uppercase tracking-[0.5em] text-slate-500">Email</p>
+  <div class="mx-auto grid w-full max-w-xl grid-cols-1 gap-4 text-left md:grid-cols-2">
     <a
-      class="text-xl font-medium text-[#0693e3] hover:text-[#0056a3] transition-colors"
-      href="mailto:arun.raodesign@example.com"
+      class="flex items-center justify-center gap-3 rounded-2xl border border-slate-200 bg-white px-6 py-5 text-lg font-semibold text-slate-900 transition hover:border-[#0693e3] hover:text-[#0693e3]"
+      href="https://www.facebook.com/arunkumargoyal"
+      target="_blank"
+      rel="noreferrer"
     >
-      arun.raodesign@example.com
+      <img src="/assets/images/facebook-icon.svg" alt="Facebook logo" class="h-8 w-8" />
+      Facebook
     </a>
-  </div>
-
-  <div class="space-y-4">
-    <p class="text-sm uppercase tracking-[0.5em] text-slate-500">Socials</p>
-    <div class="grid gap-3 text-lg">
-      <a
-        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
-        href="https://github.com/arunraodesign"
-        target="_blank"
-        rel="noreferrer"
-      >
-        GitHub · @arunraodesign
-      </a>
-      <a
-        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
-        href="https://www.linkedin.com/in/arun-rao"
-        target="_blank"
-        rel="noreferrer"
-      >
-        LinkedIn · /in/arun-rao
-      </a>
-      <a
-        class="rounded-2xl border border-slate-200 bg-white px-5 py-4 text-slate-800 hover:border-[#0693e3] hover:text-[#0693e3] transition-colors"
-        href="https://twitter.com/arun_rao"
-        target="_blank"
-        rel="noreferrer"
-      >
-        X · @arun_rao
-      </a>
-    </div>
+    <a
+      class="flex items-center justify-center gap-3 rounded-2xl border border-slate-200 bg-white px-6 py-5 text-lg font-semibold text-slate-900 transition hover:border-[#0693e3] hover:text-[#0693e3]"
+      href="https://www.linkedin.com/in/dr-arun-kumar-75584230"
+      target="_blank"
+      rel="noreferrer"
+    >
+      <img
+        src="/assets/images/linkedin-icon.png"
+        alt="LinkedIn logo"
+        class="h-10 w-10 object-contain"
+      />
+      LinkedIn
+    </a>
   </div>
 </section>
