Just use 1 grid in resume.html

--- a/src/resume.html
+++ b/src/resume.html
@@ -51,32 +51,30 @@ permalink: /resume/
         </li>
       </ul>
     {% endcall %}
-  </div>
 
-  {% call resume_card("Clinical Skills") %}
-    <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
-      <li>
-        <span>Orthodontics:</span>
-        <ul class="mt-2 space-y-1 text-sm text-slate-600 list-disc list-inside pl-4">
-          <li>Exceptional experience and skill for 15 years</li>
-          <li>Straight wire, Begg's technique, Functional appliances</li>
-        </ul>
-      </li>
-      <li>Comprehensive Oral Diagnosis and Treatment Planning</li>
-      <li>Restorative Procedures (Composites, Amalgams, Inlays &amp; Onlays)</li>
-      <li>Complete Dentures and Removable Cast Partial Dentures</li>
-      <li>Crowns &amp; Bridges</li>
-      <li>Hygiene checks, Prophylaxis, Scaling &amp; Root Planning</li>
-      <li>Root Canal Treatment of Anteriors and Premolars</li>
-      <li>Extractions</li>
-    </ul>
-  {% endcall %}
+    {% call resume_card("Clinical Skills") %}
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+        <li>
+          <span>Orthodontics:</span>
+          <ul class="mt-2 space-y-1 text-sm text-slate-600 list-disc list-inside pl-4">
+            <li>Exceptional experience and skill for 15 years</li>
+            <li>Straight wire, Begg's technique, Functional appliances</li>
+          </ul>
+        </li>
+        <li>Comprehensive Oral Diagnosis and Treatment Planning</li>
+        <li>Restorative Procedures (Composites, Amalgams, Inlays &amp; Onlays)</li>
+        <li>Complete Dentures and Removable Cast Partial Dentures</li>
+        <li>Crowns &amp; Bridges</li>
+        <li>Hygiene checks, Prophylaxis, Scaling &amp; Root Planning</li>
+        <li>Root Canal Treatment of Anteriors and Premolars</li>
+        <li>Extractions</li>
+      </ul>
+    {% endcall %}
 
-  <div class="grid gap-6 md:grid-cols-2">
     {% call resume_card("Professional Licensure") %}
-      <p class="mt-4 text-sm text-slate-600">
-        Registered as a General Dentist with the College of Dental Surgeons of British Columbia.
-      </p>
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+        <li>Registered as a General Dentist with the College of Dental Surgeons of British Columbia.</li>
+      </ul>
     {% endcall %}
 
     {% call resume_card("Professional Memberships") %}
@@ -89,9 +87,7 @@ permalink: /resume/
         <li>Life Member, Indian Dental Association (IDA)</li>
       </ul>
     {% endcall %}
-  </div>
 
-  <div class="grid gap-6 md:grid-cols-2">
     {% call resume_card("Conferences & Professional Meetings") %}
       <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
         <li>Pacific Dental Conference, Vancouver, BC [2016]</li>
@@ -107,11 +103,9 @@ permalink: /resume/
         <li>&ldquo;Versatility of the Modern Begg's Appliance in Intrusion and Bodily Retraction of Maxillary Anteriors&rdquo; in the journal of Dental Research and Therapies [December 2009]</li>
       </ul>
     {% endcall %}
-  </div>
 
-  <div class="grid gap-6 md:grid-cols-2">
     {% call resume_card("Community Service") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
         <li>Active association with Colgate India and the Indian Dental Association</li>
         <li>Organized and attended various dental health camps in India</li>
       </ul>
