Fix a styling issue with lists

--- a/src/resume.html
+++ b/src/resume.html
@@ -53,10 +53,10 @@ permalink: /resume/
     {% endcall %}
 
     {% call resume_card("Clinical Skills") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>
           <span>Orthodontics:</span>
-          <ul class="mt-2 space-y-2 text-sm text-slate-600 list-disc list-inside pl-4">
+          <ul class="mt-2 space-y-2 text-sm text-slate-600 list-disc list-outside pl-4 marker:mr-1">
             <li>Exceptional experience and skill for 15 years</li>
             <li>Straight wire, Begg's technique, Functional appliances</li>
           </ul>
@@ -72,13 +72,13 @@ permalink: /resume/
     {% endcall %}
 
     {% call resume_card("Professional Licensure") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>Registered as a General Dentist with the College of Dental Surgeons of British Columbia.</li>
       </ul>
     {% endcall %}
 
     {% call resume_card("Professional Memberships") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>Canadian Dental Association</li>
         <li>British Columbia Dental Association</li>
         <li>American Student Dental Association (ASDA) [2013 - 2015]</li>
@@ -89,7 +89,7 @@ permalink: /resume/
     {% endcall %}
 
     {% call resume_card("Conferences & Professional Meetings") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>Pacific Dental Conference, Vancouver, BC [2016]</li>
         <li>Yankee Dental Conference, Boston, MA [2014, 2015]</li>
         <li>Numerous national level and state level Dental and Orthodontic Conferences in India</li>
@@ -97,7 +97,7 @@ permalink: /resume/
     {% endcall %}
 
     {% call resume_card("Publications") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>&ldquo;Correction of Class II Div. 2 Malocclusion in a Young Adult Female&rdquo; in the journal of Dental Research and Therapies [October 2009]</li>
         <li>&ldquo;Management of Class II Div. 2 by a General Dentist&rdquo; in the journal of Dental Research and Therapies [November 2009]</li>
         <li>&ldquo;Versatility of the Modern Begg's Appliance in Intrusion and Bodily Retraction of Maxillary Anteriors&rdquo; in the journal of Dental Research and Therapies [December 2009]</li>
@@ -105,7 +105,7 @@ permalink: /resume/
     {% endcall %}
 
     {% call resume_card("Community Service") %}
-      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside">
+      <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-outside pl-5 marker:mr-1">
         <li>Active association with Colgate India and the Indian Dental Association</li>
         <li>Organized and attended various dental health camps in India</li>
       </ul>
