--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@ permalink: /
       I received my Bachelor of Dental Surgery (BDS) degree from Government Dental College, Rohtak, India in 1988, and Master of Dental Surgery (MDS) degree in Orthodontics from the All India Institute of Medical Sciences (AIIMS), New Delhi, a premier health institute of India. I have been working as a General Dentist and an Orthodontist and have been a member of teaching faculty since 1995. I have more than 3000 completed Orthodontic cases to my credit during a span of 19 years. I received my DMD degree from Henry M. Goldman School of Dental Medicine, Boston University in 2015.
     </p>
     <p>
-      Check out my <a href="/resume/">resume</a> and some of my <a href="/finished-cases/">finished cases</a>.
+      Check out my
+      <a class="text-[#0693e3] underline underline-offset-4 transition hover:text-[#0d83d7]" href="/resume/">resume</a>
+      and some of my
+      <a class="text-[#0693e3] underline underline-offset-4 transition hover:text-[#0d83d7]" href="/finished-cases/">finished cases</a>.
     </p>
   </div>
   <div class="flex items-start justify-center order-1 md:order-2">
