Add a border around images

--- a/src/finished-cases.html
+++ b/src/finished-cases.html
@@ -14,7 +14,7 @@ permalink: /finished-cases/
       <article class="space-y-3">
         <a
           href="{{ case.link }}"
-          class="block overflow-hidden rounded-[6px] shadow-sm shadow-slate-200 transition hover:shadow-lg"
+          class="block overflow-hidden border border-slate-200 transition hover:border-slate-300"
         >
           <img
             src="{{ case.image }}"
